[tool.poetry]
name = "Predicci칩n de Obesidad a partir de H치bitos de Vida"
version = "0.0.1"
description = "Predicci칩n de Obesidad a partir de H치bitos de Vida"
authors = ["yeibaron"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
numpy = "2.*"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
plotly = "^5.24.1"
scikit-learn = "^1.5.2"
ucimlrepo = "^0.0.7"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
